; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_chroma/extr_chain.c_get_allowed_chromas.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_chroma/extr_chain.c_get_allowed_chromas.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@pi_allowed_chromas_yuv10 = common dso_local global i32* null, align 8
@pi_allowed_chromas_yuv = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_7__*)* @get_allowed_chromas to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_allowed_chromas(%struct.TYPE_7__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_7__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %11 [
    i32 130, label %9
    i32 131, label %9
    i32 129, label %9
    i32 134, label %9
    i32 132, label %9
    i32 133, label %9
    i32 128, label %9
  ]

9:                                                ; preds = %1, %1, %1, %1, %1, %1, %1
  %10 = load i32*, i32** @pi_allowed_chromas_yuv10, align 8
  store i32* %10, i32** %2, align 8
  br label %13

11:                                               ; preds = %1
  %12 = load i32*, i32** @pi_allowed_chromas_yuv, align 8
  store i32* %12, i32** %2, align 8
  br label %13

13:                                               ; preds = %11, %9
  %14 = load i32*, i32** %2, align 8
  ret i32* %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
